# 2026_DSU_ForceChain_Detection

./: CMakeLists.txt  Makefile  README.md  measure_performance.sh  performance_results.csv  run_linear_scale.sh  test.sh
plot/: plotter.cpp
results/: base_state.csv  base_w1000_h100.csv  base_w1200_h100.csv  base_w1400_h100.csv  base_w1600_h100.csv  base_w1800_h100.csv  base_w2000_h100.csv  base_w200_h100.csv  base_w400_h100.csv  base_w600_h100.csv  base_w800_h100.csv  network_w1000_h100.csv  network_w1200_h100.csv  network_w1400_h100.csv  network_w1600_h100.csv  network_w1800_h100.csv  network_w2000_h100.csv  network_w200_h100.csv  network_w400_h100.csv  network_w600_h100.csv  network_w800_h100.csv
src/: DisjointSet.cpp  DisjointSet.h  Particle.cpp  Particle.h  SimulationBox.cpp  SimulationBox.h  SimulationDriver.cpp  SimulationDriver.h  Vector.cpp  Vector.h  main.cpp
test/: test_disjoint_set.cpp  test_vector.cpp
